vlib/v/checker/tests/left_shift_op_expr_not_used.out
vlib/v/checker/tests/left_shift_op_expr_not_used.vv:4:2: error: unused expression
    2 |     mut a := 12
    3 |     mut arr := []int{}
    4 |     a << 1
      |     ~~~~~~
    5 |     if true {
    6 |         a << 2
vlib/v/checker/tests/left_shift_op_expr_not_used.vv:6:3: error: unused expression
    4 |     a << 1
    5 |     if true {
    6 |         a << 2
      |         ~~~~~~
    7 |     }
    8 |     c := if true { a << 111 } else { a << 333 }
vlib/v/checker/tests/left_shift_op_expr_not_used.vv:10:2: error: unused expression
    8 |     c := if true { a << 111 } else { a << 333 }
    9 |     println(c)
   10 |     a << 1
      |     ~~~~~~
   11 |     println(a)
   12 |     5 << 9
vlib/v/checker/tests/left_shift_op_expr_not_used.vv:12:2: error: unused expression
   10 |     a << 1
   11 |     println(a)
   12 |     5 << 9
      |     ~~~~~~
   13 |     for i in 0 .. 10 {
   14 |         z := i << 5
vlib/v/checker/tests/left_shift_op_expr_not_used.vv:15:3: error: unused expression
   13 |     for i in 0 .. 10 {
   14 |         z := i << 5
   15 |         i << 5
      |         ~~~~~~
   16 |         println(z)
   17 |     }
vlib/v/checker/tests/left_shift_op_expr_not_used.vv:33:3: error: unused expression
   31 |     //
   32 |     x := if true {
   33 |         a << 1
      |         ~~~~~~
   34 |         999
   35 |     } else {
vlib/v/checker/tests/left_shift_op_expr_not_used.vv:37:3: error: unused expression
   35 |     } else {
   36 |         println('---')
   37 |         a << 9999
      |         ~~~~~~~~~
   38 |         println('---')
   39 |         555
